[package]
name = "smart-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"        # For random sampling
num-traits="0.2"    # For Float trait
kiddo = "5.0"       # For kd-trees
special = "0.11"    # For gamma function
serde = {version = "1.0", features = ["derive"]}    # For serialization and derserialization
json = "0.12.4"                                     # For json serialization and derserialization


[dev-dependencies]
macroquad = "0.3"   # used for 2d animation in examples
bincode = "1.3"     # used for binary serialization (with serde)
clap = {version = "4.0", features = ["derive"]} # Argument parsing
image = "0.24"      # Saving 2D videos
tempfile = "3.16"   # Saving 2D videos
